# gloo-bgc-demo

./: .envrc  .gitignore  404.html  Makefile  README.md  Vagrantfile  ansible.cfg  cleanup.yml  cloud_clean.yml  index.html  mkdocs.yml  playbook.yml  pyproject.toml  requirements.txt  requirements.yml  sitemap.xml  test.yml  vars.yml  vars.yml.example
.github/workflows/: image.yml
access-policies/: index.html
ansible-roles/: index.html
clean-up/: index.html
cluster/istio/: istio-cr.yaml
cluster/istiod/: istiod-destination-rule.yaml  istiod-gateway.yaml  istiod-vs.yaml  kustomization.yaml
demo-app/: .eslintignore  .eslintrc.json  Dockerfile  package.json
demo-app/components/: loader.tsx
demo-app/pages/: bgc.tsx  index.tsx
deploy-blue/: index.html
deploy-canary/: index.html
deploy-green/: index.html
docs/: access-policies.md  ansible-roles.md  deploy-blue.md  deploy-canary.md  deploy-green.md  env-setup.md  index.md  mesh.md  setup.md  site-site-vpn.md  site-to-site-vpn.md  tools-and-sources.md  traffic.md  troubleshooting.md
env-setup/: index.html
extras/: checks-and-tests.yaml  httpbin.yaml
includes/: backup.md  call-service.md  env.md  gke-cluster-ip-plan.md  istio-deploy.md  tools.md  tunnel_manual.md
inventory.WIP/: hosts
mesh/: index.html
mesh-files/: bgc-virtual-mesh.yaml
search/: search_index.json
setup/: index.html
site-site-vpn/: index.html
site-to-site-vpn/: index.html
templates/: .envrc.j2  vars.yml.example
tools-and-sources/: index.html
traffic/: index.html
troubleshooting/: index.html
(+92 files in other folders)
