[tool.poetry]
name = "gcp-demos"
version = "0.1.0"
description = "gcp-demos"
authors = ["Kamesh Sampath <kamesh.sampath@hotmail.com>"]
license = "=ASL-2"

[tool.poetry.dependencies]
python = "3.9.9"
google-auth = "^2.1.0"
ansible = "^4.5.0"
netaddr = "^0.8.0"
kubernetes = "^18.20.0"
yamllint = "^1.26.3"
ansible-lint = "^5.1.3"
boto3 = "^1.18.44"
jc = "^1.16.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
